src/objects/Lead.object
<CustomObject>
<fields>
    <fullName>MX_WB_lst_EstatusBloqueado__c</fullName>
    <description>Nuevo campo Estatus Bloqueado de Tele marketing</description>
    <label>Estatus Bloqueado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Estatusdecotizacion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bloqueo 1 año</fullName>
            </value>
            <value>
                <fullName>Bloqueo definitivo</fullName>
            </value>
            <value>
                <fullName>Bloqueo posibilidad de regreso</fullName>
            </value>
            <value>
                <fullName>No Bloqueado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
<fullName>MX_WB_lst_EstatusPrimerContacto__c</fullName>
    <description>Nuevo campo para identificar el primer contacto con prospecto</description>
    <label>Estatus Primer Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacto Efectivo</fullName>
            </value>
            <value>
                <fullName>Contacto No Efectivo</fullName>
            </value>
            <value>
                <fullName>No Contacto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>MX_WB_ph_Telefono1__c</fullName>
    <description>Nuevo campo de teléfono para contactabilidad de telemarketing</description>
    <label>Teléfono 1</label>
    <type>Phone</type>
</fields>
<fields>
    <fullName>MX_WB_ph_Telefono2__c</fullName>
    <description>Nuevo campo de teléfono para contactabilidad de telemarketing</description>
    <label>Teléfono 2</label>
    <type>Phone</type>
</fields>
<fields>
    <fullName>MX_WB_ph_Telefono3__c</fullName>
    <description>Nuevo campo de teléfono para contactabilidad de telemarketing</description>
    <label>Teléfono 3</label>
    <type>Phone</type>
</fields>
<fields>
    <fullName>MX_WB_Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo provisional para establecer la relación entre el contacto y la oportunidad generada en la conversión.</description>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades Comerciales</relationshipLabel>
    <relationshipName>Oportunidades_Comerciales</relationshipName>
    <type>Lookup</type>
</fields>
<fields>
    <fullName>MX_WB_txt_Prefijo_1__c</fullName>
    <description>Campo de telemarketing prefijo 1</description>
    <label>Prefijo 1</label>
    <length>3</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_Prefijo_2__c</fullName>
    <description>Campo de telemarketing prefijo 2</description>
    <label>Prefijo 2</label>
    <length>3</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_Prefijo_3__c</fullName>
    <description>Campo de telemarketing prefijo 3</description>
    <label>Prefijo 3</label>
    <length>3</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>xmlEnvio__c</fullName>
    <label>xmlEnvio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</fields>
<fields>
    <fullName>xmlRespuesta__c</fullName>
    <label>xmlRespuesta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</fields>
<fields>
    <fullName>Resultadollamada__c</fullName>
    <label>Resultado de la llamada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No contestó</fullName>
            </value>
            <value>
                <fullName>No le interesa</fullName>
            </value>
            <value>
                <fullName>Teléfono equivocado</fullName>
            </value>
            <value>
                <fullName>Teléfono inexistente</fullName>
            </value>
            <value>
                <fullName>Teléfono ocupado</fullName>
            </value>
			<value>
                <fullName>Contacto</fullName>
             </value>
             <value>
                    <fullName>No Contacto</fullName>
              </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>Extension__c</fullName>
    <label>Extensión</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</fields>
<fields>
    <fullName>Numero_de_Motor__c</fullName>
    <label>Número de Motor</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Placas__c</fullName>
    <label>Placas</label>
    <length>8</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Quienreferencia__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quien lo referencia</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades Comerciales</relationshipLabel>
    <relationshipName>Oportunidades_Comerciales</relationshipName>
    <type>Lookup</type>
</fields>
<fields>
    <fullName>MX_WB_Convertido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar si el Lead ha sido convertido o no.</description>
    <label>Convertido</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>MX_WB_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo provisional para realizar la relación entre la oportunidad generada al convertir el Lead.</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades Comerciales</relationshipLabel>
    <relationshipName>Oportunidades_Comerciales</relationshipName>
    <type>Lookup</type>
</fields>
<fields>
    <fullName>MX_WB_RCuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo provisional para realizar la relación entre una cuenta con un Lead que sea convertido.</description>
    <label>RCuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades Comerciales (RCuenta)</relationshipLabel>
    <relationshipName>Oportunidades_Comerciales1</relationshipName>
    <type>Lookup</type>
</fields>
<fields>
    <fullName>MX_WB_TM_Congelado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo sirve para no enviar el prospecto a CTI cuando tenga el valor activo</description>
    <label>Congelado</label>
    <type>Checkbox</type>
</fields>
<fields>
    <fullName>MX_WB_TipoTelefono1__c</fullName>
    <description>Nuevo campo para identificar el tipo de teléfono para proceso de telemarketing</description>
    <label>Tipo de Teléfono 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>MX_WB_TipoTelefono2__c</fullName>
    <description>Nuevo campo para identificar el tipo de teléfono para proceso de telemarketing</description>
    <label>Tipo de Teléfono 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>MX_WB_TipoTelefono3__c</fullName>
    <description>Nuevo campo para identificar el tipo de teléfono para proceso de telemarketing</description>
    <label>Tipo de Teléfono 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
<fields>
    <fullName>MX_WB_txt_BCOM__c</fullName>
    <description>&quot;0 = NO tiene el canal
1-A = Si cuenta con el canal y esta activo.
1-I = Si cuenta con el canal y esta inactivo por cualquier situación.&quot;</description>
    <label>BCOM</label>
    <length>3</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_BMOV__c</fullName>
    <description>&quot;0 = NO tiene el canal
1-A = Si cuenta con el canal y esta activo.
1-I = Si cuenta con el canal y esta inactivo por cualquier situación.&quot;</description>
    <label>BMOV</label>
    <length>3</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_Clave_Texto__c</fullName>
    <description>Nuevo campo para telemarketing TREADMENCODE generado por affinium en resguardo</description>
    <label>Clave Texto</label>
    <length>25</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_Extension1__c</fullName>
    <description>Nuevo campo para extensión de teléfono de telemarketing</description>
    <label>Extensión 1</label>
    <length>18</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_Extension2__c</fullName>
    <description>Nuevo campo para extensión de teléfono de telemarketing</description>
    <label>Extensión 2</label>
    <length>18</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_Extension3_del__c</fullName>
    <description>Nuevo campo para extensión de teléfono de telemarketing</description>
    <label>Extensión 3</label>
    <length>18</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_NumClienteEnmascarado__c</fullName>
    <description>Nuevo campo para telemarketing 8 DIGITOS ENMASCARADO</description>
    <label>Número Cliente Enmascarado</label>
    <length>8</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_Prefijo_2__c</fullName>
    <description>Campo de telemarketing prefijo 2</description>
    <label>Prefijo 2</label>
    <length>3</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_txt_Prefijo_3__c</fullName>
    <description>Campo de telemarketing prefijo 3</description>
    <label>Prefijo 3</label>
    <length>3</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Origen__c</fullName>
    <formula>TEXT ( LeadSource )</formula>
    <label>Origen</label>
    <type>Text</type>
</fields>
<fields>
    <fullName>MX_WB_ContadorRemarcado__c</fullName>
    <label>Contador remarcado</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad</label>
    <length>50</length>
    <type>Text</type>
</fields>
<fields>
        <fullName>CodigoPostal__c</fullName>
        <label>Código Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
<fields>
    <fullName>Telefono_Oficina__c</fullName>
    <label>Teléfono de Oficina</label>
    <type>Phone</type>
</fields>
<fields>
    <fullName>Telefono_de_casa__c</fullName>
    <label>Teléfono de casa</label>
    <type>Phone</type>
</fields>
<fields>
        <fullName>MX_SB_VTS_Tipificacion_LV2__c</fullName>
        <description>Indica el nivel 2 del arbol de tipificación</description>
        <label>¿Contacto Efectivo?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resultadollamada__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacto Efectivo</fullName>
                </value>
                <value>
                    <fullName>Contacto No Efectivo</fullName>
                </value>
                <value>
                    <fullName>No Contacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipificacion_LV3__c</fullName>
        <description>Indica el nivel 3 del arbol de tipificación</description>
        <label>¿Interesado?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_SB_VTS_Tipificacion_LV2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interesado</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
                <value>
                    <fullName>No Interesado</fullName>
                </value>
                <value>
                    <fullName>No Interesado (CNE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipificacion_LV4__c</fullName>
        <description>Indica el nivel 4 del arbol de tipificación</description>
        <label>¿Acepta Cotización / Contratación?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_SB_VTS_Tipificacion_LV3__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Aplica(CNE)</fullName>
                </value>
                <value>
                    <fullName>Acepta contratación</fullName>
                </value>
                <value>
                    <fullName>Acepta cotización</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
                <value>
                    <fullName>No acepta cotización</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadasNoEfectivas__c</fullName>
        <description>Valor numero contador llamadas no efectivas</description>
        <formula>IF( ISBLANK( MX_SB_VTS_Llamadas_No_Efectivas__c) , 0, MX_SB_VTS_Llamadas_No_Efectivas__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacto No Efectivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadasTotales__c</fullName>
        <label>Contador Llamadas Totales</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadas__c</fullName>
        <description>Valor Contador remarcado en número</description>
        <formula>IF(  ISBLANK( MX_SB_VTS_ContadorRemarcado__c) , 0, MX_SB_VTS_ContadorRemarcado__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Toques</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorRemarcado__c</fullName>
        <description>Contador total llamadas por el proveedor de call center</description>
        <label>Contador Llamadas Toques</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_LlamadasTotales__c</fullName>
        <formula>IF( ISBLANK( MX_SB_VTS_ContadorLlamadasTotales__c) , 0, MX_SB_VTS_ContadorLlamadasTotales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Llamadas totales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Llamadas_Efectivas__c</fullName>
        <description>Contador de llamadas efectivas al cliente</description>
        <label>Contador Llamadas  Efectivas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Llamadas_No_Efectivas__c</fullName>
        <description>Contador de llamadas no efectivas al cliente</description>
        <label>Contador Llamadas No Efectivas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_FechaHoraAgenda__c</fullName>
        <description>Fecha Hora de agenda GMT</description>
        <formula>IF( ISBLANK(MX_SB_VTS_FechaCallme__c),  CreatedDate ,DATETIMEVALUE(MX_SB_VTS_FechaCallme__c + &apos; &apos; + MX_SB_VTS_HoraCallMe__c+&apos;:00&apos;))</formula>
        <label>Fecha/Hora Agenda</label>
        <type>DateTime</type>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_LookActivity__c</fullName>
        <description>Campo que permite identificar cual es la tarea actual que se esta trabajando durante el proceso de venta Telemarketing</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LLamada Activa</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_Hubo_Contacto__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Casilla de uso para los flujos de venta</description>
        <inlineHelpText>Determina si la llamada fue correctamente actualizada.</inlineHelpText>
        <label>¿Hubo Contacto?</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_Fue_contacto_efectivo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Valida si la llamada en que existió contacto fue efectiva o errónea</description>
        <label>¿Fue contacto efectivo?</label>
        <type>Checkbox</type>
    </fields>
 <fields>
        <fullName>MX_SB_VTS_Numero_de_Llamadas__c</fullName>
		<description>Describre le numero de llamadas por actividad.</description>
        <label>Numero de Llamadas</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadas__c</fullName>
        <description>Valor Contador remarcado en número</description>
        <formula>IF(  ISBLANK( MX_SB_VTS_ContadorRemarcado__c) , 0, MX_SB_VTS_ContadorRemarcado__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Toques</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadasEfectivas__c</fullName>
        <description>Valor numero contador llamadas efectivas</description>
        <formula>IF( ISBLANK( MX_SB_VTS_Llamadas_Efectivas__c) , 0, MX_SB_VTS_Llamadas_Efectivas__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacto Efectivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadasNoEfectivas__c</fullName>
        <description>Valor numero contador llamadas no efectivas</description>
        <formula>IF( ISBLANK( MX_SB_VTS_Llamadas_No_Efectivas__c) , 0, MX_SB_VTS_Llamadas_No_Efectivas__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacto No Efectivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadasTotales__c</fullName>
        <label>Contador Llamadas Totales</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorRemarcado__c</fullName>
        <description>Contador total llamadas por el proveedor de call center</description>
        <label>Contador Llamadas Toques</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Llamadas_Efectivas__c</fullName>
        <description>Contador de llamadas efectivas al cliente</description>
        <label>Contador Llamadas  Efectivas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Llamadas_No_Efectivas__c</fullName>
        <description>Contador de llamadas no efectivas al cliente</description>
        <label>Contador Llamadas No Efectivas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_LlamadasTotales__c</fullName>
        <formula>IF( ISBLANK( MX_SB_VTS_ContadorLlamadasTotales__c) , 0, MX_SB_VTS_ContadorLlamadasTotales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Llamadas totales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorRemarcado__c</fullName>
        <description>Contador total llamadas por el proveedor de call center</description>
        <label>Contador Llamadas Toques</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_UsoObjeciones__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si en el flujo se usaron objeciones</description>
        <label>Se usaron objeciones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Contador_Email__c</fullName>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Contador Email</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
          <fullName>AllOpenLeads</fullName>
          <columns>FULL_NAME</columns>
          <columns>LEAD.MOBILE_PHONE</columns>
          <columns>LEAD.EMAIL</columns>
          <columns>LEAD.CREATED_DATE</columns>
          <columns>Producto_Interes__c</columns>
          <columns>CORE.USERS.FIRST_NAME</columns>
          <columns>CORE.USERS.ALIAS</columns>
          <columns>EnviarCTI__c</columns>
          <filterScope>Queue</filterScope>
          <queue>Asesores_ASD</queue>
          <label>Todos los candidatos abiertos</label>
          <sharedTo>
              <group>MX_SB_VTS_AsesoresASD</group>
          </sharedTo>
          <filters>
              <field>Producto_Interes__c</field>
              <operation>equals</operation>
              <value>Seguro de auto,Seguro de Moto,Seguro Fronterizo,Seguro Legalizado,Seguro de Moto Bancomer,Seguro de auto fronterizo Bancomer,Seguro de auto nacionalizado,Auto Seguro Dinamico</value>
          </filters>
          <filters>
              <field>LEAD.CONVERTED</field>
              <operation>equals</operation>
              <value>0</value>
          </filters>
      </listViews>
      <listViews>
          <fullName>Asesores_ASD_Lead</fullName>
          <columns>FULL_NAME</columns>
          <columns>LEAD.MOBILE_PHONE</columns>
          <columns>LEAD.EMAIL</columns>
          <columns>LEAD.CREATED_DATE</columns>
          <columns>Producto_Interes__c</columns>
          <columns>CORE.USERS.FIRST_NAME</columns>
          <columns>CORE.USERS.ALIAS</columns>
          <columns>EnviarCTI__c</columns>
          <filterScope>Queue</filterScope>
          <queue>Asesores_ASD</queue>
          <sharedTo>
              <group>MX_SB_VTS_AsesoresASD</group>
          </sharedTo>
          <filters>
              <field>Producto_Interes__c</field>
              <operation>equals</operation>
              <value>Seguro de auto,Seguro de Moto,Seguro Fronterizo,Seguro Legalizado,Seguro de Moto Bancomer,Seguro de auto fronterizo Bancomer,Seguro de auto nacionalizado,Auto Seguro Dinamico,Auto Seguro Dinámico</value>
          </filters>
          <filters>
              <field>LEAD.CONVERTED</field>
              <operation>equals</operation>
              <value>0</value>
          </filters>
          <label>Asesores ASD</label>
      </listViews>
      <listViews>
          <fullName>Asesores_ASD_Tlmkt_Lead</fullName>
          <columns>FULL_NAME</columns>
          <columns>LEAD.MOBILE_PHONE</columns>
          <columns>LEAD.EMAIL</columns>
          <columns>MX_WB_Cliente_Unico_BBVA__c</columns>
          <columns>LEAD.CREATED_DATE</columns>
          <columns>Producto_Interes__c</columns>
          <columns>CORE.USERS.FIRST_NAME</columns>
          <columns>CORE.USERS.ALIAS</columns>
          <columns>EnviarCTI__c</columns>
          <filterScope>Queue</filterScope>
          <queue>Asesores_ASD_Tlmkt</queue>
          <sharedTo>
              <group>MX_SB_VTS_AsesoresASD</group>
          </sharedTo>
          <label>Asesores ASD Tlmkt</label>
      </listViews>
      <listViews>
          <fullName>MX_SB_VTS_Call_me_back</fullName>
          <columns>FULL_NAME</columns>
          <columns>LEAD.MOBILE_PHONE</columns>
          <columns>LEAD.EMAIL</columns>
          <columns>MX_WB_Cliente_Unico_BBVA__c</columns>
          <columns>LEAD.CREATED_DATE</columns>
          <columns>Producto_Interes__c</columns>
          <columns>CORE.USERS.FIRST_NAME</columns>
          <columns>CORE.USERS.ALIAS</columns>
          <columns>EnviarCTI__c</columns>
          <filterScope>Queue</filterScope>
          <sharedTo>
              <group>MX_SB_VTS_AsesoresASD</group>
          </sharedTo>
          <filters>
              <field>LEAD.LEAD_SOURCE</field>
              <operation>equals</operation>
              <value>Call me back</value>
          </filters>
          <filters>
              <field>LEAD.STATUS</field>
              <operation>equals</operation>
              <value>Abierto</value>
          </filters>
          <filters>
              <field>LEAD.CREATED_DATE</field>
              <operation>equals</operation>
              <value>TODAY</value>
          </filters>
          <filters>
              <field>Producto_Interes__c</field>
              <operation>equals</operation>
              <value>Seguro de Moto,Seguro Fronterizo,Seguro Legalizado,Seguro de Moto Bancomer,Seguro de auto fronterizo Bancomer,Seguro de auto nacionalizado,Auto Seguro Dinamico,Auto Seguro Dinámico</value>
          </filters>
          <label>Call me back</label>
          <queue>Asesores_ASD</queue>
      </listViews>
      <listViews>
          <fullName>MX_SB_VTS_Call_me_backVida</fullName>
          <columns>FULL_NAME</columns>
          <columns>LEAD.MOBILE_PHONE</columns>
          <columns>LEAD.EMAIL</columns>
          <columns>MX_WB_Cliente_Unico_BBVA__c</columns>
          <columns>LEAD.CREATED_DATE</columns>
          <columns>Producto_Interes__c</columns>
          <columns>CORE.USERS.FIRST_NAME</columns>
          <columns>CORE.USERS.ALIAS</columns>
          <columns>EnviarCTI__c</columns>
          <filterScope>Everything</filterScope>
          <sharedTo>
              <group>MX_SB_VTS_SMART_CENTER_GROUP_OPPORTUNITY</group>
          </sharedTo>
          <filters>
              <field>LEAD.LEAD_SOURCE</field>
              <operation>equals</operation>
              <value>Call me back</value>
          </filters>
          <filters>
              <field>LEAD.STATUS</field>
              <operation>equals</operation>
              <value>Abierto</value>
          </filters>
          <filters>
              <field>LEAD.CREATED_DATE</field>
              <operation>equals</operation>
              <value>TODAY</value>
          </filters>
          <filters>
              <field>Producto_Interes__c</field>
              <operation>equals</operation>
              <value>Vida</value>
          </filters>
          <label>Call me back Vida</label>
      </listViews>
      <listViews>
          <fullName>MyUnreadLeads</fullName>
          <columns>FULL_NAME</columns>
          <columns>LEAD.COMPANY</columns>
          <columns>LEAD.STATE</columns>
          <columns>LEAD.PHONE</columns>
          <columns>LEAD.EMAIL</columns>
          <columns>LEAD.RATING</columns>
          <columns>LEAD.UNREAD</columns>
          <columns>LEAD.STATUS</columns>
          <filterScope>Mine</filterScope>
          <filters>
              <field>LEAD.UNREAD</field>
              <operation>equals</operation>
              <value>1</value>
          </filters>
          <label>My Unread Leads</label>
      </listViews>
      <listViews>
          <fullName>Outbound</fullName>
          <columns>FULL_NAME</columns>
          <columns>LEAD.MOBILE_PHONE</columns>
          <columns>LEAD.EMAIL</columns>
          <columns>MX_WB_Cliente_Unico_BBVA__c</columns>
          <columns>LEAD.CREATED_DATE</columns>
          <columns>Producto_Interes__c</columns>
          <columns>CORE.USERS.FIRST_NAME</columns>
          <columns>CORE.USERS.ALIAS</columns>
          <columns>EnviarCTI__c</columns>
          <filterScope>Queue</filterScope>
          <queue>Asesores_ASD_Tlmkt</queue>
          <sharedTo>
              <group>MX_SB_VTS_AsesoresASD</group>
          </sharedTo>
          <filters>
              <field>LEAD.CONVERTED</field>
              <operation>equals</operation>
              <value>0</value>
          </filters>
          <filters>
              <field>LEAD.RECORDTYPE</field>
              <operation>equals</operation>
              <value>Lead.MX_WB_rt_Telemarketing</value>
          </filters>
          <filters>
              <field>Producto_Interes__c</field>
              <operation>equals</operation>
              <value>Seguro de auto,Seguro de Moto,Seguro Fronterizo,Seguro Legalizado,Seguro de Moto Bancomer,Seguro de auto fronterizo Bancomer,Auto Seguro Dinamico</value>
          </filters>
          <label>Outbound</label>
      </listViews>
  <listViews>
          <fullName>TodaysLeads</fullName>
          <columns>FULL_NAME</columns>
          <columns>LEAD.MOBILE_PHONE</columns>
          <columns>LEAD.EMAIL</columns>
          <columns>MX_WB_Cliente_Unico_BBVA__c</columns>
          <columns>LEAD.CREATED_DATE</columns>
          <columns>Producto_Interes__c</columns>
          <columns>CORE.USERS.FIRST_NAME</columns>
          <columns>CORE.USERS.ALIAS</columns>
          <columns>EnviarCTI__c</columns>
          <filterScope>Queue</filterScope>
          <queue>Asesores_ASD</queue>
          <sharedTo>
              <group>MX_SB_VTS_AsesoresASD</group>
          </sharedTo>
          <filters>
              <field>LEAD.CREATED_DATE</field>
              <operation>equals</operation>
              <value>TODAY</value>
          </filters>
          <filters>
              <field>Producto_Interes__c</field>
              <operation>equals</operation>
              <value>Seguro de auto,Seguro de Moto,Seguro Fronterizo,Seguro Legalizado,Seguro de Moto Bancomer,Seguro de auto fronterizo Bancomer,Seguro de auto nacionalizado,Auto Seguro Dinamico,Auto Seguro Dinámico</value>
          </filters>
          <label>Candidatos de hoy</label>
      </listViews>
      <listViews>
            <fullName>MX_SB_VTS_OutboundVida</fullName>
            <columns>FULL_NAME</columns>
            <columns>LEAD.MOBILE_PHONE</columns>
            <columns>LEAD.EMAIL</columns>
            <columns>MX_WB_Cliente_Unico_BBVA__c</columns>
            <columns>LEAD.CREATED_DATE</columns>
            <columns>Producto_Interes__c</columns>
            <columns>CORE.USERS.FIRST_NAME</columns>
            <columns>CORE.USERS.ALIAS</columns>
            <columns>EnviarCTI__c</columns>
            <filterScope>Everything</filterScope>
            <sharedTo>
                <group>MX_SB_VTS_AsesoresASD</group>
            </sharedTo>
            <filters>
                <field>LEAD.CONVERTED</field>
                <operation>equals</operation>
                <value>0</value>
            </filters>
            <filters>
                <field>LEAD.RECORDTYPE</field>
                <operation>equals</operation>
                <value>Lead.MX_WB_rt_Telemarketing</value>
            </filters>
            <filters>
                <field>Producto_Interes__c</field>
                <operation>equals</operation>
                <value>Vida</value>
            </filters>
            <label>Outbound Vida</label>
          </listViews>
      <listViews>
            <fullName>MX_SB_VTS_OutboundHogar</fullName>
            <columns>FULL_NAME</columns>
            <columns>LEAD.MOBILE_PHONE</columns>
            <columns>LEAD.EMAIL</columns>
            <columns>LEAD.CREATED_DATE</columns>
            <columns>Producto_Interes__c</columns>
            <columns>CORE.USERS.FIRST_NAME</columns>
            <columns>CORE.USERS.ALIAS</columns>
            <columns>EnviarCTI__c</columns>
            <filterScope>Everything</filterScope>
            <sharedTo>
                <group>MX_SB_VTS_SMART_CENTER_GROUP_OPPORTUNITY</group>
            </sharedTo>
            <filters>
                <field>LEAD.CONVERTED</field>
                <operation>equals</operation>
                <value>0</value>
            </filters>
            <filters>
                <field>LEAD.RECORDTYPE</field>
                <operation>equals</operation>
                <value>Lead.MX_WB_rt_Telemarketing</value>
            </filters>
            <filters>
                <field>Producto_Interes__c</field>
                <operation>equals</operation>
                <value>Hogar</value>
            </filters>
            <label>Outbound Hogar</label>
      </listViews>
      <listViews>
          <fullName>Seguro_de_auto_fronterizo_bancomer</fullName>
          <columns>FULL_NAME</columns>
          <columns>LEAD.MOBILE_PHONE</columns>
          <columns>LEAD.EMAIL</columns>
          <columns>MX_WB_Cliente_Unico_BBVA__c</columns>
          <columns>LEAD.CREATED_DATE</columns>
          <columns>Producto_Interes__c</columns>
          <columns>CORE.USERS.FIRST_NAME</columns>
          <columns>CORE.USERS.ALIAS</columns>
          <columns>EnviarCTI__c</columns>
          <filterScope>Queue</filterScope>
          <queue>Asesores_ASD</queue>
          <sharedTo>
              <group>MX_SB_VTS_AsesoresASD</group>
          </sharedTo>
          <filters>
              <field>Producto_Interes__c</field>
              <operation>equals</operation>
              <value>Seguro Fronterizo,Seguro Legalizado,Seguro de auto fronterizo Bancomer</value>
          </filters>
          <label>Seguro de auto fronterizo bancomer</label>
      </listViews>
</CustomObject>